# no-llm

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml
docs/: install.md  intro.md
docs/configs/: capabilities.md  constraints.md  inheritance.md  mode.md  model_identity.md  overview.md  pricing.md  privacy.md  properties.md
no_llm/: settings.py
no_llm/config/: errors.py
no_llm/integrations/: pydantic_ai.py
no_llm/models/claude/: claude_3_5_haiku.py  claude_3_5_sonnet.py  claude_3_5_sonnet_v2.py  claude_3_7_sonnet.py  claude_3_haiku.py  claude_3_opus.py  claude_3_sonnet.py
no_llm/models/deepseek/: deepseek_chat.py  deepseek_r1_llama_70b_distilled.py  deepseek_reasoner.py
no_llm/models/gemini/: gemini_1_5_flash.py  gemini_1_5_pro.py  gemini_2_0_flash_lite.py
no_llm/models/groq/: groq_mixtral.py
no_llm/models/llama/: llama_3_1_405b.py  llama_3_3_70b.py
no_llm/models/mistral/: mistral_large.py  mistral_nemo.py
no_llm/providers/: base.py
